<resources>
    <string name="app_name">Dunzo Clone</string>
    <string name="get_started_with_dunzo">Get started with Dunzo</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="_91">+91</string>
    <string name="verify_and_continue">Verify and Continue</string>
    <string name="tvI_imp_guideline">The product image(s) shown are for representation purpose only. The actual product may vary. It is recommended to read the product labels (if any), batch details, directions for use, etc., as contained in the actual product before consuming and/or utilizing the product. The product is meant for fresh and immediate consumption, or as specified by the seller of the product. For other information, please contact the merchant directly.</string>
    <string name="important_information">Important Information</string>
    <string name="_1_kg">1 KG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">EDIT</string>
    <string name="version_number">Version 3.34.0.1</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="paytm">PayTm</string>
    <string name="saved_address">Saved Address</string>
    <string name="saved_cards">Saved cards</string>
    <string name="refer_a_partner">Refer a partner</string>
    <string name="notification_settings">Notification settings</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="hey_there">Hey There!</string>
    <string name="phone_num_dummy">+914578124785</string>
    <string name="search_hint">   Address search e.g. Bangalore</string>
    <string name="search_for_your_location">Search for your location</string>
    <string name="or">OR</string>
    <string name="use_current_location">Use current location</string>

    <string name="tirupati_vegetables_and_fruit_market">Tirupati Vegetables And Fruit Market</string>
    <string name="fresh_fruits">Fresh Fruits</string>
    <string name="enter_search_for_item">Enter Search For item</string>
    <string name="rasta_pet">Rasta Pet</string>
    <string name="_270">₹270</string>
    <string name="view_all">View All</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="tirupati_farsan_fruits_and">Tirupati farsan fruits and vegetable market</string>
    <string name="tirupati_address">Shop No 4 ground floor, Sampada Nagari, Next to Shedge Dairy, 307, Somwar Peth, Pune-411011</string>
    <string name="apple_royal_gala">Apple Royal Gala</string>
    <string name="No_ContactDelivery">Partner will check with you and leave the order outside the your door.</string>
    <string name="bengaluru">Bengaluru</string>
    <string name="recent_searches">Recent searches</string>
    <string name="karnataka_india">Karnataka, India</string>
    <string name="saved_addresses">Saved addresses</string>
    <string name="home">Home</string>
    <string name="_01_level_14_ub_city_ashok_nagar_bangalore">01,Level 14, UB City, Ashok Nagar,Bangalore</string>
    <string name="orders">Orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>