<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".Activities.StoreCategoryActivity">

    <RelativeLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/dp_22"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ivBackbtn"
            android:text="@string/tirupati_vegetables_and_fruit_market"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStoreLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStoreName"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ivBackbtn"
            android:text="@string/rasta_pet"
            android:textColor="@color/visible_grey"
            android:textSize="12sp" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/topContainer">

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBestSeller"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_18"
                android:gravity="end|center_vertical"
                android:text="@string/best_sellers"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvViewAll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/dp_18"
                android:gravity="end|center_vertical"
                android:text="@string/view_all"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold"
                app:drawableRightCompat="@drawable/ic_right_arrow" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerBestSeller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvViewAll"
                android:layout_marginLeft="@dimen/dp_18"
                android:layout_marginRight="@dimen/dp_18" />

            <View
                android:id="@+id/vLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/recyclerBestSeller"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:background="@color/grey" />


            <TextView
                android:id="@+id/tvWhatLooking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/recyclerBestSeller"
                android:layout_marginVertical="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_18"
                android:layout_marginRight="@dimen/dp_18"
                android:gravity="start"
                android:text="What are you looking for"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewStoreCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWhatLooking"
                android:layout_marginLeft="@dimen/dp_18"
                android:layout_marginRight="@dimen/dp_18" />

            <LinearLayout
                android:id="@+id/displayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerviewStoreCategory"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/dp_7"
                android:background="#f2f2f2"
                android:orientation="vertical"
                android:padding="@dimen/dp_18">

                <TextView
                    android:id="@+id/tvBottomStorename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/tirupati_vegetables_and_fruit_market"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBottomStoreOwner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/tirupati_farsan_fruits_and"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tvBottomStoreAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/tirupati_address"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>