<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:scaleType="centerCrop"
        android:src="@drawable/dunzoface_screen_img" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvGetStarted"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:layout_marginVertical="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/get_started_with_dunzo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMobileNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGetStarted"
                android:layout_marginHorizontal="20dp"
                android:text="@string/enter_your_mobile_number"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/llMobileNum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvMobileNum"
                android:layout_margin="12dp"
                android:background="@drawable/rectangle_border"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:src="@drawable/ic_call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_91"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etMobileNum"
                    android:layout_width="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Continue"
                app:cornerRadius="30dp"
                android:backgroundTint="#03d290"
                android:layout_marginTop="70dp"
                android:layout_below="@id/llMobileNum"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>